[gd_scene load_steps=10 format=3 uid="uid://7bwe18ukufk6"]

[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="1_cv8gp"]
[ext_resource type="Script" path="res://scenes/leaderboard/leaderboard_item.gd" id="1_evpvl"]
[ext_resource type="Texture2D" uid="uid://ctu1miqp425c5" path="res://assets/gui/icons/casette.png" id="2_6ex3l"]
[ext_resource type="FontFile" uid="uid://df06bw7a1s1u7" path="res://fonts/Montserrat-Bold.ttf" id="3_gotih"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1c11"]
content_margin_left = 25.0
content_margin_right = 25.0

[sub_resource type="LabelSettings" id="LabelSettings_s8gk0"]
line_spacing = 0.0
font = ExtResource("1_cv8gp")
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_of6sf"]
font = ExtResource("3_gotih")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03sh8"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.980392, 0, 0.796078, 0.282353)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_k47sq"]
line_spacing = 0.0
font = ExtResource("3_gotih")

[node name="LeaderboardItem" type="PanelContainer"]
anchors_preset = -1
anchor_right = 1.0
size_flags_horizontal = 3
script = ExtResource("1_evpvl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

[node name="NumberLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
theme_override_styles/normal = SubResource("StyleBoxEmpty_o1c11")
text = "01"
label_settings = SubResource("LabelSettings_s8gk0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvatarImage" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
texture = ExtResource("2_6ex3l")
stretch_mode = 5

[node name="Details" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/Details"]
text = "Song Name"
label_settings = SubResource("LabelSettings_of6sf")

[node name="DateLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
text = "Date"

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
theme_override_styles/normal = SubResource("StyleBoxFlat_03sh8")
text = "0"
label_settings = SubResource("LabelSettings_k47sq")

[node name="PercentLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
theme_override_styles/normal = SubResource("StyleBoxFlat_03sh8")
text = "%0"
label_settings = SubResource("LabelSettings_k47sq")

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 3
anchors_preset = 0
